unpackaged/main/default/objects/FSL__Time_Dependency__c/FSL__Time_Dependency__c.object-meta.xml
<CustomObject>
    <label>Appointment Dependency</label>
    <nameField>
        <displayFormat>AD-{0000}</displayFormat>
        <label>Appointment Dependency Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appointment Dependencies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>