unpackaged/main/default/objects/FSL__Time_Dependency__c/fields/FSL__Dependency__c.field-meta.xml
<CustomField>
    <fullName>FSL__Dependency__c</fullName>
    <label>Dependency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Same Start</fullName>
                <default>true</default>
                <label>Same Start</label>
            </value>
            <value>
                <fullName>Start After Finish</fullName>
            </value>
            <value>
                <fullName>Start After Finish And Same Day</fullName>
            </value>
            <value>
                <fullName>Immediately Follow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>