unpackaged/main/default/objects/FSL__Time_Dependency__c/fields/FSL__Service_Appointment_1__c.field-meta.xml
<CustomField>
    <fullName>FSL__Service_Appointment_1__c</fullName>
    <label>Service Appointment 1</label>
    <referenceTo>ServiceAppointment</referenceTo>
    <relationshipName>Time_Dependencies</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>