unpackaged/main/default/objects/FSL__Time_Dependency__c/validationRules/FSL__Dependency_Is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>FSL__Dependency_Is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(FSL__Dependency__c , &#39;&#39;)</errorConditionFormula>
    <errorDisplayField>FSL__Dependency__c</errorDisplayField>
    <errorMessage>Select a dependency type.</errorMessage>
</ValidationRule>