unpackaged/main/default/objects/FSL__Time_Dependency__c/validationRules/FSL__Same_Resource_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>FSL__Same_Resource_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(FSL__Dependency__c , &#39;Immediately Follow&#39;), FSL__Same_Resource__c = FALSE)</errorConditionFormula>
    <errorDisplayField>FSL__Dependency__c</errorDisplayField>
    <errorMessage>Immediately Follow dependency requires Same Resource</errorMessage>
</ValidationRule>