unpackaged/main/default/objects/FSL__Time_Dependency__c/validationRules/FSL__Service_Appointment_2_Is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>FSL__Service_Appointment_2_Is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(FSL__Service_Appointment_2__c)</errorConditionFormula>
    <errorDisplayField>FSL__Service_Appointment_2__c</errorDisplayField>
    <errorMessage>Service appointment 2 is required.</errorMessage>
</ValidationRule>