unpackaged/main/default/objects/FSL__Time_Dependency__c/validationRules/FSL__Service_Appointment_2_Not_Changed.validationRule-meta.xml
<ValidationRule>
    <fullName>FSL__Service_Appointment_2_Not_Changed</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(FSL__Service_Appointment_2__c)</errorConditionFormula>
    <errorDisplayField>FSL__Service_Appointment_2__c</errorDisplayField>
    <errorMessage>It is not allowed to change any of the service appointments in the relationship</errorMessage>
</ValidationRule>